crates/metastore/src/snapshots/metastore__metastore__tests__delete_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: "(all_volumes, all_volumes_after, get_volume)"
snapshot_kind: text
---
(
    [
        RwObject {
            data: Memory,
            created_at: "TIMESTAMP",
            updated_at: "TIMESTAMP",
        },
    ],
    [],
    None,
)
