crates/metastore/src/snapshots/metastore__metastore__tests__duplicate_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: result
snapshot_kind: text
---
Err(
    ObjectAlreadyExists {
        type_name: "test",
        name: "vol/test",
    },
)
