crates/metastore/src/snapshots/metastore__metastore__tests__tables.snap
---
source: crates/metastore/src/metastore.rs
expression: (paths)
snapshot_kind: text
---
Ok(
    [
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "manifest/00000000000000000001.manifest",
                },
                last_modified: 2025-02-25T23:32:55.478965Z,
                size: 80,
                e_tag: Some(
                    "0",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "manifest/00000000000000000002.manifest",
                },
                last_modified: 2025-02-25T23:32:55.479123Z,
                size: 88,
                e_tag: Some(
                    "1",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "manifest/00000000000000000003.manifest",
                },
                last_modified: 2025-02-25T23:32:55.481513Z,
                size: 96,
                e_tag: Some(
                    "3",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000001.sst",
                },
                last_modified: 2025-02-25T23:32:55.480324Z,
                size: 68,
                e_tag: Some(
                    "2",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000002.sst",
                },
                last_modified: 2025-02-25T23:32:55.482291Z,
                size: 280,
                e_tag: Some(
                    "4",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000003.sst",
                },
                last_modified: 2025-02-25T23:32:55.583601Z,
                size: 186,
                e_tag: Some(
                    "5",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000004.sst",
                },
                last_modified: 2025-02-25T23:32:55.682588Z,
                size: 297,
                e_tag: Some(
                    "6",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000005.sst",
                },
                last_modified: 2025-02-25T23:32:55.783109Z,
                size: 191,
                e_tag: Some(
                    "7",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000006.sst",
                },
                last_modified: 2025-02-25T23:32:55.883644Z,
                size: 373,
                e_tag: Some(
                    "8",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000007.sst",
                },
                last_modified: 2025-02-25T23:32:55.982867Z,
                size: 220,
                e_tag: Some(
                    "9",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000008.sst",
                },
                last_modified: 2025-02-25T23:32:56.083674Z,
                size: 1331,
                e_tag: Some(
                    "10",
                ),
                version: None,
            },
        ),
        Ok(
            ObjectMeta {
                location: Path {
                    raw: "wal/00000000000000000009.sst",
                },
                last_modified: 2025-02-25T23:32:56.183554Z,
                size: 256,
                e_tag: Some(
                    "11",
                ),
                version: None,
            },
        ),
    ],
)
