crates/metastore/src/snapshots/metastore__metastore__tests__update_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: "(rwo1, rwo2)"
snapshot_kind: text
---
(
    RwObject {
        data: Memory,
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
    RwObject {
        data: File(
            IceBucketFileVolume {
                path: "/tmp",
            },
        ),
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
)
